[package]
name = "winter"
version = "0.1.0"
authors = ["Randy Schütt <rswhite4@googlemail.com>"]

[dependencies]
winapi = { version = "0.3.5", features = [
        "winbase",
        "winuser",
        "consoleapi",
        "processenv",
        "wincon",
        "handleapi",
        "errhandlingapi"
    ]}